src/objects/Policyholder_Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Anything_else_you_would_like_to_tell_us__c</fullName>
        <label>Anything else you would like to tell us</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_Specialist_Email__c</fullName>
        <label>Property Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Policyholder</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courteous_and_polite__c</fullName>
        <label>Courteous and polite</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explaining_the_initial_process__c</fullName>
        <label>Explaining the initial process</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Helpful_and_knowledgeable_about_area__c</fullName>
        <label>Helpful and knowledgeable about area</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landlord_lease_signing_process_was_easy__c</fullName>
        <label>Landlord lease signing process was easy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_in_was_easy_and_efficient__c</fullName>
        <label>Move-in was easy and efficient</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Promotor_Score__c</fullName>
        <label>Net Promotor Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_satisfaction_with_CRS_service__c</fullName>
        <label>Overall satisfaction with CRS service</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Properties_presented_met_short_term_need__c</fullName>
        <label>Properties presented met short term need</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quick_to_respond_to_your_questions__c</fullName>
        <label>Quick to respond to your questions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_property_in_condition_expected__c</fullName>
        <label>Rental property in condition expected</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Score__c</fullName>
        <formula>IF( Net_Promotor_Score__c = 10,1, (Net_Promotor_Score__c + Courteous_and_polite__c + Quick_to_respond_to_your_questions__c + Explaining_the_initial_process__c + Helpful_and_knowledgeable_about_area__c + Properties_presented_met_short_term_need__c + Move_in_was_easy_and_efficient__c + Landlord_lease_signing_process_was_easy__c + Rental_property_in_condition_expected__c + Overall_satisfaction_with_CRS_service__c) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GetFeedback Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Policyholder Survey Response</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policyholder Survey Responses</pluralLabel>
    <recordTypes>
        <fullName>Survey_1</fullName>
        <active>true</active>
        <description>Policyholder survey #1</description>
        <label>Survey 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>